tests/paczka1/small_fuzzy/17870756.err
Error in line 1: 91qBNNw2qF5 A577 83,7
Error in line 5: S244 S244 8,7
Error in line 14: 91qBNNw2qF5 S244 22,64
Error in line 11: 91qBNNw2qF5 A299 77,1
